# django-template

./: .gitignore  LICENSE  README.md
.github/workflows/: backend.yml
backend/: .flake8  README.md  pyproject.toml
backend/devpro/: asgi.py  s3_file_handlers.py  settings.py  urls.py  wsgi.py
backend/devpro/base/: admin.py  apps.py  forms.py  manager.py  models.py  tests.py  urls.py  views.py
backend/devpro/base/migrations/: 0001_initial.py  0002_arquivo.py
backend/devpro/base/templates/base/: base.html  home.html
backend/devpro/base/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
backend/devpro/base/tests/: test_home.py  test_login.py  test_manager.py  test_settings.py
config/: README.md  env-sample
docker/: README.md  docker-compose.yml  nginx.conf
